--- a/src/index.html
+++ b/src/index.html
@@ -104,7 +104,7 @@
             </p>
           </div>
         </section>
-        <h1 class='staff-picks-title'>Popular Recipes</h1>
+        <h1 class='staff-picks-title'>Staff Favorites</h1>
         <section class="staff-picks">
         </section>
       </section>
