--- a/src/index.html
+++ b/src/index.html
@@ -23,14 +23,14 @@
         <a href="#" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="browse-categories">
           <h2><u>Browse by Category:</u></h2>
-          <a href="#">Breakfast</a>
-          <a href="#">Lunch</a>
-          <a href="#">Dinner</a>
-          <a href="#">Appetizers</a>
-          <a href="#">Salads</a>
-          <a href="#">Sandwhiches</a>
-          <a href="#">Entrees</a>
-          <a href="#">Desserts</a>
+          <a class="category-option" href="#">Breakfast</a>
+          <a class="category-option" href="#">Lunch</a>
+          <a class="category-option" href="#">Dinner</a>
+          <a class="category-option" href="#">Appetizers</a>
+          <a class="category-option" href="#">Salads</a>
+          <a class="category-option" href="#">Sandwhiches</a>
+          <a class="category-option" href="#">Entrees</a>
+          <a class="category-option" href="#">Desserts</a>
         </div>
         <div class="social-icons">
           <img class="social-icon" src="../assets/instagram.svg" alt="">
