Create sideNavHandler function

--- a/src/index.html
+++ b/src/index.html
@@ -23,12 +23,12 @@
         <a href="#" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="browse-categories">
           <h2><u>Browse by Category:</u></h2>
-          <a class="category-option" href="#">Breakfast</a>
-          <a class="category-option" href="#">Lunch</a>
+          <a class="category-option">Breakfast</a>
+          <a class="category-option">Lunch</a>
           <a class="category-option" href="#">Dinner</a>
           <a class="category-option" href="#">Appetizers</a>
           <a class="category-option" href="#">Salads</a>
-          <a class="category-option" href="#">Sandwhiches</a>
+          <a class="category-option" href="#">Sandwiches</a>
           <a class="category-option" href="#">Entrees</a>
           <a class="category-option" href="#">Desserts</a>
         </div>
