Create displayCategoryPage function

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-  <h1>What's Cookin'</h1>
   <div class='hero-container fade-in'>
+    <h1>What's Cookin'</h1>
     <!-- <section id='hero-dish'>
       <h6>IT'S-A-PIZZA</h6>
       <h1>Margheritta Pizza</h1>
@@ -28,7 +28,7 @@
           <a class="category-option" href="#">Dinner</a>
           <a class="category-option" href="#">Appetizers</a>
           <a class="category-option" href="#">Salads</a>
-          <a class="category-option" href="#">Sandwiches</a>
+          <!-- <a class="category-option" href="#">Sandwiches</a> -->
           <a class="category-option" href="#">Entrees</a>
           <a class="category-option" href="#">Desserts</a>
         </div>
