Add hover effect to staff-pick-img

--- a/src/index.html
+++ b/src/index.html
@@ -120,7 +120,7 @@
     <!-- VIEW RECIPE PAGE -->
     <section class="recipe-view hidden fade-in">
       <section class="recipe-left-column">
-        <img class="recipe-img recipe-image" src="../assets/salmon.jpg" alt="">
+        <img class="recipe-img" src="../assets/salmon.jpg" alt="">
         <div class="recipe-view-icons">
           <svg id='recipe-bookmark' class="recipe-bookmark-icon--inactive sidebar-icon icon"></svg>
           <span id='recipe-id' class='hidden'></span>
