--- a/index.html
+++ b/index.html
@@ -27,9 +27,15 @@
           <a class="category-option" href="#">Entrees</a>
         </div>
         <div class="social-icons">
-          <img class="social-icon" src="./assets/instagram.svg" alt="">
-          <img class="social-icon" src="./assets/facebook.svg" alt="">
-          <img class="social-icon" src="./assets/twitter.svg" alt="">
+          <a href='https://www.instagram.com/whatscookinturing/'>
+            <img class="social-icon" src="./assets/instagram.svg" alt="">
+          </a>
+          <a>
+            <img class="social-icon" src="./assets/facebook.svg" alt="">
+          </a>
+          <a>
+            <img class="social-icon" src="./assets/twitter.svg" alt="">
+          </a>
         </div>
       </div>
       <span onclick="openNav()">
@@ -162,44 +168,19 @@
         <section class="user-view-section user-search-view hidden">
 
         </section>
-        <!-- User 'Add Item' Form Section -->
-        <section class="add-item-container hidden">
-          <form class="add-item-form">
-            <h2>New Item</h2>
-            <div class="form-input">
-              Item Name: <input class="add-item-name" type="text" value="" />
-            </div>
-            <div class="form-input">
-              Amount: <input class="add-item-amount" max="99" min="1" step="1" type="number" value="0" />
-            </div>
-            <div class="form-input add-item-category">
-              Category:
-              <select class="add-item-category">
-                <option class="selected-category" selected="selected" value="other">Other</option>
-                <option class="selected-category" value="meat">Meat</option>
-                <option class="selected-category" value="fish">Fish</option>
-                <option class="selected-category" value="vegetable">Vegetable</option>
-                <option class="selected-category" value="munchie">Munchie</option>
-                <option class="selected-category" value="fruit">Fruit</option>
-                <option class="selected-category" value="bread">Bread</option>
-                <option class="selected-category" value="soup">Soup</option>
-                <option class="selected-category" value="sauce">Sauce</option>
-                <option class="selected-category" value="seasoning" value"seasoning">Seasoning</option>
-              </select>
-            </div>
-            <input class="add-item-button" type="submit" value="Add Item" />
-          </form>
-        </section>
         <!-- User 'Filter By' Section -->
         <section class="user-filter-content hidden">
           <div class="nav-search-bar">
             <input class="saved-recipes-search search-input" type="text" placeholder="Search Your Saved Recipes">
           </div>
-          <label for="filter-items">Filter By</label>
+          <label class="user-filter-items" for="filter-items">Filter By</label>
           <select id="items">
-            <option class="filter-option" value="item-1">Name</option>
-            <option class="filter-option" value="item-2">Category</option>
-            <option class="filter-option" value="item-3">Date Added</option>
+            <option class="filter-option" value="item-1">Breakfast</option>
+            <option class="filter-option" value="item-2">Lunch</option>
+            <option class="filter-option" value="item-1">Dinner</option>
+            <option class="filter-option" value="item-2">Appetizers</option>
+            <option class="filter-option" value="item-1">Salad</option>
+            <option class="filter-option" value="item-2">Entrees</option>
           </select>
         </section>
       </section>
