Fix bug could not favorite recipe from recipe view when signed in

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <section class="recipe-left-column">
         <img class="recipe-img" src="./assets/salmon.jpg" alt="">
         <div class="recipe-view-icons">
-          <svg id='recipe-bookmark' class="recipe-view-bookmark-icon sidebar-icon icon"></svg>
+          <svg id='recipe-bookmark' class="recipe-view-bookmark-icon recipe-bookmark-icon--inactive sidebar-icon icon"></svg>
           <span id='recipe-id' class='hidden'></span>
           <svg id='recipe-basket' class="sidebar-icon icon"></svg>
           <svg id='recipe-cookie' class="recipe-solid-cookie-icon--active sidebar-icon icon">
