Change sign-out icon

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <a href="#" id='profile-dropdown-pantry'><img class="dropdown-icons" src="./assets/bread.svg" alt="">
             My Pantry</a>
           <br>
-          <a href="#" id='profile-dropdown-log-out'><img class="dropdown-icons" src="./assets/middle-finger.svg" alt="">
+          <a href="#" id='profile-dropdown-log-out'><img class="dropdown-icons" src="./assets/sign-out.svg" alt="">
             Log Out</a>
         </div>
       </div>
